--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "teleportvr",
-  "version": "1.1.0",
-  "description": "Teleport module for WebVR, THREE.js and VRController.js projects",
-  "main": "teleportvr.min.js",
+  "version": "2.0.0",
+  "description": "Teleport module for WebXR THREE.js projects",
+  "main": "./dist/client/teleportvr.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "concurrently -k \"tsc -p ./src/server -w\" \"tsc -p ./src/client -w\" \"nodemon ./dist/server/server.js\"",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./dist/server/server.js"
   },
   "repository": {
     "type": "git",
@@ -12,15 +14,24 @@
   },
   "keywords": [
     "teleport",
-    "three.js",
+    "threejs",
     "webvr",
-    "vrcontroller.js",
+    "webxr",
     "seanwasere"
   ],
   "author": "Sean Bradley",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Sean-Bradley/TeleportVR/issues"
+  "homepage": "https://github.com/Sean-Bradley/TeleportVR#readme",
+  "devDependencies": {
+    "@types/express": "^4.17.9",
+    "@types/node": "^13.13.15",
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.4"
   },
-  "homepage": "https://github.com/Sean-Bradley/TeleportVR#readme"
+  "dependencies": {
+    "express": "^4.17.1",
+    "statsvr": "^2.0.2",
+    "three": "^0.122.0",
+    "typescript": "^4.0.3"
+  }
 }
