--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teleportvr",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Teleport module for WebXR THREE.js projects",
   "main": "./dist/client/teleportvr.js",
   "scripts": {
@@ -25,21 +25,21 @@
   "license": "MIT",
   "homepage": "https://github.com/Sean-Bradley/TeleportVR#readme",
   "devDependencies": {
-    "@types/express": "^4.17.7",
-    "@types/node": "^13.13.15",
-    "@types/three": "^0.128.0",
-    "html-webpack-plugin": "^5.3.1",
-    "ts-loader": "^8.0.14",
-    "typescript": "^4.2.4",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.13",
+    "@types/three": "^0.137.0",
+    "html-webpack-plugin": "^5.5.0",
+    "statsvr": "^3.1.1",
+    "three": "^0.137.4",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5",
     "url-loader": "^4.1.1",
-    "webpack": "^5.37.0",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.3",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "statsvr": "^3.1.0",
-    "three": "^0.128.0"
+    "express": "^4.17.1"
   }
 }
