--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teleportvr",
-  "version": "3.0.4",
+  "version": "3.0.5",
   "description": "Teleport module for WebXR THREE.js projects",
   "main": "./dist/client/teleportvr.js",
   "scripts": {
@@ -25,18 +25,18 @@
   "license": "MIT",
   "homepage": "https://github.com/Sean-Bradley/TeleportVR#readme",
   "devDependencies": {
-    "@types/express": "^4.17.14",
-    "@types/node": "^18.11.9",
-    "@types/three": "^0.146.0",
-    "html-webpack-plugin": "^5.5.0",
-    "statsvr": "^3.1.3",
-    "three": "^0.146.0",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.8.4",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1",
-    "webpack-merge": "^5.8.0"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.30",
+    "@types/three": "^0.162.0",
+    "html-webpack-plugin": "^5.6.0",
+    "statsvr": "latest",
+    "three": "^0.162.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.3",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "webpack-merge": "^5.10.0"
   },
   "dependencies": {
     "express": "^4.18.2"
